syntax ="proto3";
option java_outer_classname="EquipmentModel";
message EquipmentModelMessage{
  //定义枚举类型
  enum DateType{
    AddEquipmentRequest=0;//在proto3 要求enum的编号从0开始
      EquipmentMsgRequest=1;
      ReduceEquipmentRequest=2;
      AddEquipmentResponse=3;
      EquipmentMsgResponse=4;
      ReduceEquipmentResponse=5;
  }
  //用date_type来标识传的是哪一个枚举类型
  DateType data_type=1;
  //表示每次枚举类型最多只能出现其中一个，节省空间
  oneof dateBody{
    AddEquipmentRequest addEquipmentRequest=2;//在proto3 要求enum的编号从0开始
    EquipmentMsgRequest equipmentMsgRequest=3;
    ReduceEquipmentRequest reduceEquipmentRequest=4;
    AddEquipmentResponse addEquipmentResponse=5;
    EquipmentMsgResponse equipmentMsgResponse=6;
    ReduceEquipmentResponse reduceEquipmentResponse=7;
  }
}

message AddEquipmentRequest{
  int32 articleId=1;
}
message EquipmentMsgRequest{
}
message ReduceEquipmentRequest{
  int32 position=1;
}
message AddEquipmentResponse{
}
message EquipmentMsgResponse{
   repeated EquipmentDto equipments=1;
}
message ReduceEquipmentResponse{
}
message EquipmentDto{
  //物品id
  int32 id=1;
  //装备部位
  int32 position=2;
  //  //耐久度
  int32  nowDurability=3;

}